# MiniDebugger

./: CMakeLists.txt  Makefile  README.md  breakpoint.cpp  breakpoint.hpp  command_parser.c  command_parser.h  debugger.c  debugger.c++  debugger.cpp  debugger.h  debugger.hpp  debuglib.c  debuglib.h  examplesTest.c  main  main.c  main.cpp  mysimplereader  mysimplereader.c  register.hpp  test  test.c  test.cpp
libdwarf-0.5.0/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Makefile.in  cmake_install.cmake  config.h  config.h.in  config.status  configure  install_manifest.txt  junk.dlinka  libdwarf.pc  libdwarfp.pc  libtool
libdwarf-0.5.0/Testing/Temporary/: CTestCostData.txt
libdwarf-0.5.0/doc/: Makefile  Makefile.in
libdwarf-0.5.0/test/: CTestTestfile.cmake  Makefile  Makefile.in  cmake_install.cmake  junk.PE.new  junk.dlinkb  junk.mach-o.new  selfcanonical  selferrmsglist  selfgetopttest  selfhelpertree  selfleb  selfmacrocheck  selfmakename  selfregex  selfsectionbitmaps  selftestesb  selftestextrastring  selftestnames  selfteststrcpy  selfteststring  selftied  test_canonical  test_dwarflebtest  test_dwarfstring  test_dwgetopt  test_errmsglist  test_extra_flag_strings  test_getnametest  test_helpertree  test_linkedtopath  test_macrocheck  test_makenametest  test_regex  test_safestrcpy  test_sanitized  test_sectionbitmaps  test_testesb  test_tied
libdwarf-0.5.0/test/.deps/: test_canonical-test_canonical.Po  test_dwarflebtest-test_dwarf_leb.Po  test_dwarfstring-test_dwarfstring.Po  test_dwgetopt-test_getopt.Po  test_errmsglist-test_errmsglist.Po  (+12 more)
(+138 files in other folders)
